Updated to newest spring, java 21, refactoring